--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /University-Tasks/LabTask/2023F-BSE-084-Lab04-Task2/build/
 /University-Tasks/LabTask/2023F-BSE-084-Lab04-Task3/build/
 /University-Tasks/LabTask/2023F-BSE-084-Lab04-Task5/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab05-Task1/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab05-Task1/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab05-Task2/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab05-Task3/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab05-Task2/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab05-Task3/build/
