--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 /University-Tasks/LabTask/2023F-BSE-084-Lab05-Task3/nbproject/private/
 /University-Tasks/LabTask/2023F-BSE-084-Lab05-Task2/build/
 /University-Tasks/LabTask/2023F-BSE-084-Lab05-Task3/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task1/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task1/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task4/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task4/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task2/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task2/build/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task3/nbproject/private/
+/University-Tasks/LabTask/2023F-BSE-084-Lab06-Task3/build/
